--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,12 @@
 :root {
   --main-bg-color: #F9F8FF;
   --panel-color: #FFFFFF;
-  --text-color: #82808F;
+  --border-color: #E6E4F0;
+  --text-color: #56555c;
+  --lighter-text-color: #82808F;
+  --accent-color: #ffd600;
+  --primary-font: Plus Jakarta Sans;
+  --sidebar-width: 250px;
 }
 
 * {
@@ -18,7 +23,7 @@
 body {
   background: var(--main-bg-color);
   color: var(--text-color);
-  font-family: Plus Jakarta Sans;
+  font-family: var(--primary-font);
 }
 
 .sidebar {
@@ -27,7 +32,7 @@ body {
   gap: 1em;
   position: fixed;
   padding: 1em;
-  width: 250px;
+  width: var(--sidebar-width);
   height: 100%;
   background-color: var(--panel-color);
   z-index: 1;
@@ -45,13 +50,46 @@ body {
   text-align: start;
 }
 .sidebar .title p span {
-  color: #ffd600;
+  color: var(--accent-color);
 }
 .sidebar .sidebar-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+}
+.sidebar .sidebar-wrapper ul:nth-child(2) {
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+  padding: 10px;
+}
+.sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper {
+  align-items: center;
+}
+.sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper img {
+  width: 50px;
+  border-radius: 5px;
+}
+.sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .v-wrapper {
+  gap: 0;
+}
+.sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .v-wrapper :nth-child(1) {
+  color: var(--text-color);
+  font-weight: 500;
+}
+.sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .v-wrapper :nth-child(2) {
+  color: var(--lighter-text-color);
+  font-size: 14px;
+}
+.sidebar .sidebar-wrapper ul:nth-child(2) a {
+  --red-accent-color: 173, 98, 98;
+  border-radius: 5px;
+  background-color: rgba(var(--red-accent-color), 0.15);
+  color: rgb(var(--red-accent-color));
+}
+.sidebar .sidebar-wrapper ul:nth-child(2) a:hover:not(.active) {
+  --red-accent-color: 173, 98, 98;
+  background-color: rgba(var(--red-accent-color), 0.25);
 }
 .sidebar .sidebar-wrapper ul {
   display: flex;
@@ -74,7 +112,7 @@ body {
   margin-right: 10px;
 }
 .sidebar .sidebar-wrapper ul li a.active {
-  background-color: #ffd600;
+  background-color: var(--accent-color);
   color: black;
 }
 .sidebar .sidebar-wrapper ul li a:hover:not(.active) {
@@ -83,7 +121,163 @@ body {
 
 .content {
   padding: 1em;
-  margin-left: 250px;
+  margin-left: var(--sidebar-width);
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+.content button {
+  padding: 1em;
+  border: none;
+  font-weight: 600;
+  cursor: pointer;
+}
+.content .card {
+  padding: 1em;
+  border: 1px solid var(--border-color);
+  background-color: var(--panel-color);
+  border-radius: 15px;
+}
+.content .table-container {
+  overflow-x: auto;
+}
+.content .table-container table {
+  border-spacing: 0;
+  border-collapse: collapse;
+  width: 100%;
+  font-weight: 500;
+}
+.content .table-container table thead tr th {
+  padding: 0.5em;
+  padding-top: 0;
+  text-align: start;
+  color: var(--text-color);
+  font-weight: 550;
+  border-bottom: 1px solid var(--border-color);
+}
+.content .table-container table tbody {
+  color: var(--lighter-text-color);
+}
+.content .table-container table tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+.content .table-container table tbody tr:last-child td {
+  padding-bottom: 0px;
+}
+.content .table-container table tbody tr {
+  margin: 2em;
+  border-top: 1px solid var(--border-color);
+}
+.content .table-container table tbody tr td {
+  padding: 0.5em;
+}
+.content .table-container table tbody tr td .actions {
+  display: flex;
+  gap: 0.5rem;
+}
+.content .table-container table tbody tr td .actions a {
+  color: var(--lighter-text-color);
+}
+.content .table-container table tbody tr td .actions a:hover {
+  color: var(--text-color);
+}
+
+.status-indicator {
+  color: rgba(255, 255, 255, 0.8235294118);
+  font-weight: 500;
+  text-align: center;
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 6px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.status-indicator.in-progress {
+  background-color: #ffb82e;
+}
+
+.status-indicator.completed {
+  background-color: #36d000;
+}
+
+.status-indicator.incomplete {
+  background-color: #d63502;
+}
+
+#openModal {
+  background-color: var(--accent-color);
+  font-family: var(--primary-font);
+  border-radius: 6px;
+}
+
+#modalBG {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  overflow-y: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+#modalBG .assign-task-modal {
+  background-color: var(--panel-color);
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+  padding: 1.5em;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin: 1em;
+}
+#modalBG .assign-task-modal label {
+  font-weight: 550;
+}
+#modalBG .assign-task-modal input, #modalBG .assign-task-modal textarea, #modalBG .assign-task-modal select {
+  font-family: var(--primary-font);
+  padding: 10px;
+  border-radius: 3px;
+  color: var(--lighter-text-color);
+  border: 1px solid var(--lighter-text-color);
+}
+#modalBG .assign-task-modal textarea {
+  height: 100px;
+  max-height: 100px;
+  resize: none;
+}
+#modalBG .assign-task-modal .btnSection {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+#modalBG .assign-task-modal .btnSection button {
+  padding: 0.75em 1em;
+  border: none;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 3px;
+  font-family: var(--primary-font);
+}
+#modalBG .assign-task-modal .btnSection button:nth-child(1) {
+  background-color: #28a745;
+  color: white;
+}
+
+.h-wrapper {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.v-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
