--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,8 @@ body {
   cursor: pointer;
 }
 .content .card {
+  display: grid;
+  gap: 1em;
   padding: 1em;
   border: 1px solid var(--border-color);
   background-color: var(--panel-color);
@@ -189,7 +191,6 @@ body {
   padding: 10px;
   font-size: 14px;
   border-radius: 6px;
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
@@ -222,41 +223,42 @@ body {
   overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.4);
 }
-#modalBG .assign-task-modal {
+
+.modal {
   background-color: var(--panel-color);
   border: 1px solid var(--border-color);
   border-radius: 10px;
   padding: 1.5em;
-  width: 40%;
+  width: -moz-fit-content;
+  width: fit-content;
   display: flex;
   flex-direction: column;
   gap: 1em;
-  height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   margin: 1em;
 }
-#modalBG .assign-task-modal label {
+.modal label {
   font-weight: 550;
 }
-#modalBG .assign-task-modal input, #modalBG .assign-task-modal textarea, #modalBG .assign-task-modal select {
+.modal input, .modal textarea, .modal select {
   font-family: var(--primary-font);
   padding: 10px;
   border-radius: 3px;
   color: var(--lighter-text-color);
   border: 1px solid var(--lighter-text-color);
 }
-#modalBG .assign-task-modal textarea {
+.modal textarea {
   height: 100px;
   max-height: 100px;
   resize: none;
 }
-#modalBG .assign-task-modal .btnSection {
+.modal .btnSection {
   display: flex;
   justify-content: flex-end;
   gap: 10px;
 }
-#modalBG .assign-task-modal .btnSection button {
+.modal .btnSection button {
   padding: 0.75em 1em;
   border: none;
   font-weight: 600;
@@ -264,7 +266,7 @@ body {
   border-radius: 3px;
   font-family: var(--primary-font);
 }
-#modalBG .assign-task-modal .btnSection button:nth-child(1) {
+.modal .btnSection button:nth-child(1) {
   background-color: #28a745;
   color: white;
 }
@@ -280,4 +282,9 @@ body {
   gap: 0.5rem;
 }
 
-/*# sourceMappingURL=style.css.map */
+.dash-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: minmax(auto, auto);
+  gap: 1em;
+}/*# sourceMappingURL=style.css.map */
