--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -158,6 +158,8 @@ body {
     }
 
     .card {
+        display: grid;
+        gap: 1em;
         padding: 1em;
         border: 1px solid var(--border-color);
         background-color: var(--panel-color);
@@ -243,13 +245,16 @@ body {
     background-color: #d63502;
 }
 
+
+// MODAL
+
+//button
 #openModal {
     background-color: var(--accent-color);
     font-family: var(--primary-font);
     border-radius: 6px;
 }
 
-// MODAL
 #modalBG {
     display: none;
     position: fixed;
@@ -260,57 +265,59 @@ body {
     justify-content: center;
     overflow-y: auto;
     background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal {
+    background-color: var(--panel-color);
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    padding: 1.5em;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    margin: 1em;
+
+    label {
+        font-weight: 550;
+    }
     
-    .assign-task-modal {
-        background-color: var(--panel-color);
-        border: 1px solid var(--border-color);
-        border-radius: 10px;
-        padding: 1.5em;
-        width: 40%;
+    input, textarea, select{
+        font-family: var(--primary-font);
+        padding: 10px;
+        border-radius: 3px;
+        color: var(--lighter-text-color);
+        border: 1px solid var(--lighter-text-color);
+    }
+
+    textarea {
+        height: 100px; 
+        max-height: 100px; 
+        resize: none;
+    }
+    
+    .btnSection {
         display: flex;
-        flex-direction: column;
-        gap: 1em;
-        height: -webkit-fit-content;
-        height: -moz-fit-content;
-        height: fit-content;
-        margin: 1em;
-
-        label {
-            font-weight: 550;
-        }
+        justify-content: flex-end;
+        gap: 10px;
         
-        input, textarea, select{
-            font-family: var(--primary-font);
-            padding: 10px;
+        button {
+            padding: 0.75em 1em;
+            border: none;
+            font-weight: 600;
+            cursor: pointer;
             border-radius: 3px;
-            color: var(--lighter-text-color);
-            border: 1px solid var(--lighter-text-color);
-        }
-
-        textarea {
-            height: 100px; 
-            max-height: 100px; 
-            resize: none;
+            font-family: var(--primary-font);
         }
         
-        .btnSection {
-            display: flex;
-            justify-content: flex-end;
-            gap: 10px;
-            
-            button {
-                padding: 0.75em 1em;
-                border: none;
-                font-weight: 600;
-                cursor: pointer;
-                border-radius: 3px;
-                font-family: var(--primary-font);
-            }
-            
-            button:nth-child(1) {
-                background-color: #28a745;
-                color: white;
-            }
+        button:nth-child(1) {
+            background-color: #28a745;
+            color: white;
         }
     }
 }
@@ -326,3 +333,10 @@ body {
     gap: 0.5rem;
 }
 
+//DASHBOARD
+.dash-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: minmax(auto, auto);
+    gap: 1em;
+}
