--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,9 +71,14 @@ body {
   gap: 0.5rem;
   align-items: center;
 }
-.sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper img {
-  width: 50px;
+.sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .img-container {
   border-radius: 5px;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+.sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .img-container img {
+  width: 50px;
+  height: 50px;
 }
 .sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .v-wrapper {
   display: flex;
@@ -194,7 +199,12 @@ body {
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.content .card.welcome img {
+.content .card.welcome .img-container {
+  border-radius: 5px;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+.content .card.welcome .img-container img {
   max-width: 100px;
   max-height: 100px;
 }
