--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -124,9 +124,15 @@ body {
                 @include h-wrapper;
                 align-items: center;
 
-                img {
-                    width: 50px;
+                .img-container {
                     border-radius: 5px;
+                    -o-object-fit: contain;
+                       object-fit: contain;
+                    
+                    img {
+                        width: 50px;
+                        height: 50px;
+                    }
                 }
                 
                 .v-wrapper {
@@ -246,11 +252,16 @@ body {
             }
         }
 
-        img {
-            max-width: 100px;
-            max-height: 100px;
-        }
+        .img-container {
+            border-radius: 5px;
+            -o-object-fit: contain;
+               object-fit: contain;
         
+            img {
+                max-width: 100px;
+                max-height: 100px;
+            }
+        }
     }
 
     .card {
