--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,11 @@ body {
   display: flex;
   align-items: center;
   gap: 1em;
+  justify-content: center;
+}
+.sidebar .title img {
+  width: 50px;
+  height: 50px;
 }
 .sidebar .title p {
   font-weight: 550;
@@ -72,13 +77,16 @@ body {
   align-items: center;
 }
 .sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .img-container {
+  overflow: hidden;
   border-radius: 5px;
-  -o-object-fit: contain;
-  object-fit: contain;
-}
-.sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .img-container img {
   width: 50px;
   height: 50px;
+}
+.sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .img-container img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 .sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .v-wrapper {
   display: flex;
@@ -200,13 +208,16 @@ body {
   -webkit-text-fill-color: transparent;
 }
 .content .card.welcome .img-container {
+  overflow: hidden;
   border-radius: 5px;
-  -o-object-fit: contain;
-  object-fit: contain;
+  width: 100px;
+  height: 100px;
 }
 .content .card.welcome .img-container img {
-  max-width: 100px;
-  max-height: 100px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 .content .card {
   display: grid;
@@ -343,7 +354,18 @@ body {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  margin: 1em;
+}
+.modal .img-container {
+  overflow: hidden;
+  border-radius: 5px;
+  width: 250px;
+  height: 250px;
+}
+.modal .img-container img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 .modal label {
   font-weight: 550;
@@ -354,6 +376,9 @@ body {
   border-radius: 3px;
   color: var(--lighter-text-color);
   border: 1px solid var(--lighter-text-color);
+}
+.modal input[type=file] {
+  width: 50%;
 }
 .modal textarea {
   height: 100px;
@@ -387,9 +412,19 @@ body {
   gap: 0.5rem;
 }
 
+.dash-cards-profile {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+  grid-auto-rows: minmax(auto, auto);
+  gap: 1em;
+}
+.dash-cards-profile .modal {
+  width: 100%;
+}
+
 .dash-cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, auto));
   grid-auto-rows: minmax(auto, auto);
   gap: 1em;
 }
