--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -430,6 +430,9 @@ body {
     }
 }
 
+
+
+
 //DASHBOARD
 .dash-cards {
     display: grid;
@@ -477,3 +480,10 @@ body {
         }
     }
 }
+
+
+
+.status-indicator.failedtosub { 
+    color: #1a1a1a; 
+    background-color: #fd000026 !important; 
+  }
