--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,6 +296,7 @@ body {
   padding: 10px;
   font-size: 14px;
   border-radius: 6px;
+  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
@@ -310,9 +311,9 @@ body {
   background-color: rgba(105, 232, 58, 0.1490196078);
 }
 
-.status-indicator.incomplete {
-  color: #ad6262;
-  background-color: rgba(173, 98, 98, 0.1490196078);
+.status-indicator.failedtosub {
+  color: #b10000;
+  background-color: rgba(177, 0, 0, 0.1490196078);
 }
 
 #openModal {
@@ -344,11 +345,13 @@ body {
   border: 1px solid var(--border-color);
   border-radius: 10px;
   padding: 1.5em;
+  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   display: flex;
   flex-direction: column;
   gap: 1em;
+  height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
 }
@@ -470,7 +473,4 @@ body {
   right: -40px;
 }
 
-.status-indicator.failedtosub {
-  color: #1a1a1a;
-  background-color: rgba(253, 0, 0, 0.1490196078) !important;
-}/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.css.map */
