--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,10 @@ body {
   font-family: var(--primary-font);
 }
 
+#hamburger {
+  display: none;
+}
+
 .sidebar {
   display: flex;
   flex-direction: column;
@@ -38,7 +42,7 @@ body {
   height: 100%;
   background-color: var(--panel-color);
   z-index: 1;
-  border-right: 1px solid #E6E4F0;
+  border-right: 1px solid var(--border-color);
 }
 .sidebar .title {
   display: flex;
@@ -77,6 +81,8 @@ body {
   align-items: center;
 }
 .sidebar .sidebar-wrapper ul:nth-child(2) .h-wrapper .img-container {
+  display: flex;
+  align-items: center;
   overflow: hidden;
   border-radius: 5px;
   width: 50px;
@@ -141,6 +147,15 @@ body {
   background-color: rgba(0, 0, 0, 0.062745098);
 }
 
+.content-title {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.content-title p {
+  font-weight: 500;
+}
+
 .content {
   padding: 1em;
   margin-left: var(--sidebar-width);
@@ -166,7 +181,7 @@ body {
   border-radius: 10px;
   cursor: pointer;
   font-family: var(--primary-font);
-  border: 1px solid #E6E4F0;
+  border: 1px solid var(--border-color);
   background-color: #FAFAFA;
 }
 .content .btnSection form button {
@@ -179,7 +194,7 @@ body {
   display: flex;
   gap: 0.5rem;
   align-items: center;
-  border: 1px solid #E6E4F0;
+  border: 1px solid var(--border-color);
   background-color: white;
 }
 .content .btnSection form button i {
@@ -200,6 +215,11 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  gap: 0;
+}
+.content .card.welcome .v-wrapper p {
+  color: var(--lighter-text-color);
+  font-weight: 500;
 }
 .content .card.welcome .v-wrapper span {
   background: var(--vibrant-color);
@@ -208,8 +228,10 @@ body {
   -webkit-text-fill-color: transparent;
 }
 .content .card.welcome .img-container {
+  display: flex;
+  align-items: center;
   overflow: hidden;
-  border-radius: 5px;
+  border-radius: 100%;
   width: 100px;
   height: 100px;
 }
@@ -241,7 +263,7 @@ body {
   padding-top: 0;
   text-align: start;
   color: var(--text-color);
-  font-weight: 550;
+  font-weight: 700;
   border-bottom: 1px solid var(--border-color);
 }
 .content .table-container table tbody {
@@ -252,8 +274,7 @@ body {
 }
 .content .table-container table tbody tr {
   margin: 2em;
-  border-top: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
+  border: 1px solid var(--border-color);
 }
 .content .table-container table tbody tr td {
   padding: 0.5em;
@@ -311,7 +332,7 @@ body {
   background-color: rgba(105, 232, 58, 0.1490196078);
 }
 
-.status-indicator.failedtosub {
+.status-indicator.failedtosub, .status-indicator.incomplete {
   color: #b10000;
   background-color: rgba(177, 0, 0, 0.1490196078);
 }
@@ -356,6 +377,8 @@ body {
   height: fit-content;
 }
 .modal .img-container {
+  display: flex;
+  align-items: center;
   overflow: hidden;
   border-radius: 5px;
   width: 250px;
@@ -378,7 +401,17 @@ body {
   border: 1px solid var(--lighter-text-color);
 }
 .modal input[type=file] {
-  width: 50%;
+  padding: 0;
+  border: none;
+}
+.modal input[type=file]::file-selector-button {
+  font-family: var(--primary-font);
+  padding: 1em;
+  border: none;
+  font-weight: 600;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: var(--accent-color);
 }
 .modal textarea {
   height: 100px;
@@ -471,6 +504,65 @@ body {
   position: absolute;
   top: -75px;
   right: -40px;
+}
+
+/*
+?#####################################
+?#            RESPONSIVE             #
+?#####################################
+*/
+@media screen and (max-width: 768px) {
+  #hamburger {
+    display: block;
+    font-size: 25px;
+  }
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: fixed;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-right: none;
+    border-bottom: 1px solid var(--border-color);
+  }
+  .sidebar .sidebar-wrapper {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    border: 1px solid var(--border-color);
+    padding: 1em;
+    top: 120%;
+    right: -100%;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    transition: all 0.4s ease;
+    background-color: var(--panel-color);
+    border-radius: 12px;
+  }
+  .sidebar .sidebar-wrapper ul > li {
+    flex-direction: column-reverse;
+  }
+  .sidebar .sidebar-wrapper.open {
+    right: 0%;
+    z-index: -10;
+    margin: 0em 1em;
+  }
+  .content {
+    margin-left: 0;
+    padding-top: 3em;
+  }
+  .card.welcome {
+    flex-direction: column-reverse;
+  }
+  .card.welcome .v-wrapper {
+    align-items: center;
+  }
+  .card.welcome .v-wrapper h1 {
+    text-align: center;
+    font-size: 28px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
