--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @mixin button {
     font-family: var(--primary-font);
-    padding: 1em;
+    padding: 0.75em 1em;
     border: none;
     font-weight: 600;
     border-radius: 10px;
@@ -199,7 +199,7 @@ body {
                     font-weight: 500;
                     border-radius: 10px;
                     color: #9896a3;
-                    padding: 0.85rem 1em;
+                    padding: 0.75rem 1em;
 
                     i {
                         margin-right: 10px;
@@ -293,6 +293,10 @@ body {
     
     .table-container {
         overflow-x: auto;
+        overflow-y: hidden;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
+        height: fit-content;
 
         table {
             border-spacing: 0;
@@ -303,6 +307,9 @@ body {
             thead {
                 tr {
                     th {
+                        text-transform: uppercase;
+                        letter-spacing: 1px;
+                        font-size: 14px;
                         padding: 0.5em;
                         padding-top: 0;
                         text-align: start;
@@ -350,6 +357,68 @@ body {
                         }
                     }
 
+                    td .temp-pass {
+                        background-color: #eeeeee;
+                        padding: 5px 7px;
+                        border-radius: 6px;
+                        width: -webkit-fit-content;
+                        width: -moz-fit-content;
+                        width: fit-content;
+                        font-family: monospace;
+                    }
+
+                    td .attachment {
+                        font-size: 14px;
+                        
+                        a {
+                            background-color: #4f98ff26;
+                            padding: 5px 7px;
+                            border-radius: 6px;
+                            width: -webkit-fit-content;
+                            width: -moz-fit-content;
+                            width: fit-content;
+                            
+                            color: #5b7dac;
+                            display: flex;
+                            align-items: center;
+                            gap: 0.5rem;  
+                            
+                            
+                            img {
+                                width: 20px;
+                                height: 20px;
+                            }
+                        }
+
+                        span {
+                            background-color: #e9e9e9;
+                            padding: 5px 7px;
+                            border-radius: 6px;
+                        }
+
+                        a:hover~.tooltiptext {
+                            opacity: 1;
+                            visibility: visible;
+                          }
+
+                        span.tooltiptext {
+                            @include card;
+                            opacity: 0;
+                            visibility: hidden;
+                            text-align: center;
+                            border-radius: 6px;
+                            padding: 5px;
+                            box-shadow: 1px 1px 1px #00000025;
+                          
+                            /* Position the tooltip */
+                            position: absolute;
+                            z-index: 1;
+                            margin: 0em 1em;
+
+                            transition: all 0.2s ease;
+                          }
+                    }
+
                     img {
                         @include tableimg;
                     }
@@ -359,23 +428,44 @@ body {
     }
 }
 
+.data-not-found {
+    padding: 3em 3em;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    color : var(--text-color);
+    text-align: center;
+
+    span {
+        font-size: 24px;
+        font-weight: 600;
+    }
+
+    p {
+        color : var(--lighter-text-color);
+        font-size: 14px;
+        padding-top: 5px;
+    }
+}
+
 .status-indicator {
     font-weight: 500;
     text-align: center;
-    padding: 10px;
+    padding: 5px 7px;
     font-size: 14px;
     border-radius: 6px;
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
 }
-.status-indicator.in-progress {
-    color: #ffb92e;
+.status-indicator.in-progress, .status-indicator.pending{
+    color: #d8a642;
     background-color: #ffb92e26;
 }
     
 .status-indicator.completed {
-    color: #69e83a;
+    color: #60a447;
     background-color: #69e83a26;
 }
 
@@ -424,8 +514,13 @@ body {
 
     @include img-container(250px, 5px);
 
+    .modalTitle {
+        @include v-wrapper;
+        font-size: 14px;
+    }
+
     label {
-        font-weight: 550;
+        font-weight: 600;
     }
     
     input, textarea, select{
@@ -463,6 +558,15 @@ body {
             background-color: #28a745;
             color: white;
         }
+    }
+
+    p {
+        background-color: #eeeeee;
+        padding: 5px 7px;
+        border-radius: 6px;
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
+        width: fit-content;
     }
     
     .h-wrapper {
