--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,6 +217,9 @@ body {
   gap: 0.5rem;
   gap: 0;
 }
+.content .card.welcome .v-wrapper h1 {
+  font-size: 24px;
+}
 .content .card.welcome .v-wrapper p {
   color: var(--lighter-text-color);
   font-weight: 500;
@@ -257,8 +260,8 @@ body {
   height: fit-content;
 }
 .content .table-container table {
-  border-spacing: 0;
-  border-collapse: collapse;
+  border-spacing: 0 10px;
+  border-collapse: separate;
   width: 100%;
   font-weight: 500;
 }
@@ -266,7 +269,7 @@ body {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 14px;
-  padding: 0.5em;
+  padding: 0.5rem 0.85rem;
   padding-top: 0;
   text-align: start;
   color: var(--text-color);
@@ -276,15 +279,28 @@ body {
 .content .table-container table tbody {
   color: var(--lighter-text-color);
 }
+.content .table-container table tbody tr td:first-child {
+  border-width: 1px 0px 1px 1px;
+  border-color: var(--border-color);
+  border-style: solid;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.content .table-container table tbody tr td:last-child {
+  border-width: 1px 1px 1px 0px;
+  border-color: var(--border-color);
+  border-style: solid;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
 .content .table-container table tbody tr:nth-child(even) {
   background-color: rgba(var(--even-table-color), 0.025);
 }
-.content .table-container table tbody tr {
-  margin: 2em;
-  border: 1px solid var(--border-color);
-}
 .content .table-container table tbody tr td {
-  padding: 0.5em;
+  border-width: 1px 0px;
+  border-style: solid;
+  border-color: var(--border-color);
+  padding: 0.5rem 0.85rem;
 }
 .content .table-container table tbody tr td .actions {
   display: flex;
@@ -337,14 +353,21 @@ body {
   width: 20px;
   height: 20px;
 }
-.content .table-container table tbody tr td .attachment span {
+.content .table-container table tbody tr td .attachment .no-proof {
   background-color: #e9e9e9;
   padding: 5px 7px;
   border-radius: 6px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 .content .table-container table tbody tr td .attachment a:hover ~ .tooltiptext {
   opacity: 1;
   visibility: visible;
+  display: block;
 }
 .content .table-container table tbody tr td .attachment span.tooltiptext {
   display: grid;
@@ -355,6 +378,7 @@ body {
   border-radius: 10px;
   opacity: 0;
   visibility: hidden;
+  display: none;
   text-align: center;
   border-radius: 6px;
   padding: 5px;
@@ -362,7 +386,7 @@ body {
   /* Position the tooltip */
   position: absolute;
   z-index: 1;
-  margin: 0em 1em;
+  right: 10%;
   transition: all 0.2s ease;
 }
 .content .table-container table tbody tr img {
@@ -380,7 +404,7 @@ body {
   height: 100%;
   display: grid;
   place-items: center;
-  color: var(--text-color);
+  color: var(--lighter-text-color);
   text-align: center;
 }
 .data-not-found span {
@@ -388,7 +412,6 @@ body {
   font-weight: 600;
 }
 .data-not-found p {
-  color: var(--lighter-text-color);
   font-size: 14px;
   padding-top: 5px;
 }
@@ -607,7 +630,15 @@ body {
 ?#            RESPONSIVE             #
 ?#####################################
 */
+@media screen and (max-width: 448px) {
+  .content .dash-cards {
+    grid-template-columns: auto auto;
+  }
+}
 @media screen and (max-width: 768px) {
+  table {
+    width: unset !important;
+  }
   #hamburger {
     display: block;
     font-size: 25px;
@@ -647,10 +678,14 @@ body {
   }
   .content {
     margin-left: 0;
-    padding-top: 3em;
+    padding-top: 6em;
+  }
+  .content .dash-cards.home {
+    grid-template-columns: unset;
   }
   .card.welcome {
     flex-direction: column-reverse;
+    padding: 2em !important;
   }
   .card.welcome .v-wrapper {
     align-items: center;
