--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -270,6 +270,10 @@ body {
         .v-wrapper {
             @include v-wrapper;
             gap: 0;
+
+            h1 {
+                font-size: 24px;
+            }
             
             p {
                 color: var(--lighter-text-color);
@@ -299,8 +303,8 @@ body {
         height: fit-content;
 
         table {
-            border-spacing: 0;
-            border-collapse: collapse;
+            border-spacing: 0 10px;
+            border-collapse: separate;
             width: 100%;
             font-weight: 500;
 
@@ -310,7 +314,7 @@ body {
                         text-transform: uppercase;
                         letter-spacing: 1px;
                         font-size: 14px;
-                        padding: 0.5em;
+                        padding: 0.5rem 0.85rem;
                         padding-top: 0;
                         text-align: start;
                         color: var(--text-color);
@@ -322,16 +326,34 @@ body {
 
             tbody {
                 color: var(--lighter-text-color);
+
+                tr td:first-child {
+                    border-width: 1px 0px 1px 1px;
+                    border-color: var(--border-color);
+                    border-style: solid;
+                    border-top-left-radius: 10px;
+                    border-bottom-left-radius: 10px;
+                   }
+
+                tr td:last-child {
+                    border-width: 1px 1px 1px 0px;
+                    border-color: var(--border-color);
+                    border-style: solid;
+                    border-top-right-radius: 10px;
+                    border-bottom-right-radius: 10px;
+                }
                 
                 tr:nth-child(even){
                     background-color: rgba(var(--even-table-color), 0.025);
                 }
+                
                 tr {
-                    margin: 2em;
-                    border: 1px solid var(--border-color);
                     
                     td {
-                        padding: 0.5em;
+                        border-width: 1px 0px;
+                        border-style: solid;
+                        border-color: var(--border-color);
+                        padding: 0.5rem 0.85rem;
                     }
                     
                     td .actions {
@@ -377,7 +399,6 @@ body {
                             width: -webkit-fit-content;
                             width: -moz-fit-content;
                             width: fit-content;
-                            
                             color: #5b7dac;
                             display: flex;
                             align-items: center;
@@ -390,21 +411,29 @@ body {
                             }
                         }
 
-                        span {
+                        .no-proof {
                             background-color: #e9e9e9;
                             padding: 5px 7px;
                             border-radius: 6px;
+                            width: -webkit-fit-content;
+                            width: -moz-fit-content;
+                            width: fit-content;
+                            display: flex;
+                            align-items: center;
+                            gap: 0.5rem;
                         }
 
                         a:hover~.tooltiptext {
                             opacity: 1;
                             visibility: visible;
+                            display: block;
                           }
 
                         span.tooltiptext {
                             @include card;
                             opacity: 0;
                             visibility: hidden;
+                            display: none;
                             text-align: center;
                             border-radius: 6px;
                             padding: 5px;
@@ -413,7 +442,7 @@ body {
                             /* Position the tooltip */
                             position: absolute;
                             z-index: 1;
-                            margin: 0em 1em;
+                            right: 10%;
 
                             transition: all 0.2s ease;
                           }
@@ -434,7 +463,7 @@ body {
     height: 100%;
     display: grid;
     place-items: center;
-    color : var(--text-color);
+    color : var(--lighter-text-color);
     text-align: center;
 
     span {
@@ -443,7 +472,6 @@ body {
     }
 
     p {
-        color : var(--lighter-text-color);
         font-size: 14px;
         padding-top: 5px;
     }
@@ -643,7 +671,19 @@ body {
 ?#####################################
 */
 
+@media screen and (max-width: 448px) {
+    .content {
+        .dash-cards {
+            grid-template-columns: auto auto;
+        }
+    }
+}
+
 @media screen and (max-width: 768px) {
+    table {
+        width: unset !important;
+    }
+
     #hamburger{
         display: block;
         font-size: 25px;
@@ -690,11 +730,16 @@ body {
 
     .content {
         margin-left: 0;
-        padding-top: 3em;
+        padding-top: 6em;
+
+        .dash-cards.home{
+            grid-template-columns: unset;
+        }
     }
 
     .card.welcome {
         flex-direction: column-reverse;
+        padding: 2em !important;
         
         .v-wrapper{
             align-items: center;
@@ -704,6 +749,5 @@ body {
                 font-size: 28px;
             }
         }
-        
     }
 }
