--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,6 @@ body {
   display: flex;
   align-items: center;
   gap: 1em;
-  justify-content: center;
 }
 .sidebar .title img {
   width: 50px;
@@ -632,6 +631,18 @@ body {
   position: absolute;
   top: -75px;
   right: -40px;
+}
+
+.home-board {
+  gap: 1em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+  grid-auto-rows: minmax(auto, auto);
+}
+.home-board .card.calendar {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 /*
