--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,9 +163,7 @@ body {
   gap: 1em;
 }
 .content span {
-  font-size: 0.8em;
   color: var(--lighter-text-color);
-  text-align: center;
 }
 .content .btnSection {
   display: flex;
@@ -496,20 +494,6 @@ body {
   height: -moz-fit-content;
   height: fit-content;
 }
-.modal .img-container {
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  border-radius: 5px;
-  width: 250px;
-  height: 250px;
-}
-.modal .img-container img {
-  -o-object-fit: cover;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
 .modal .modalTitle {
   display: flex;
   flex-direction: column;
@@ -526,19 +510,6 @@ body {
   color: var(--text-color);
   font-weight: 500;
   border: 2px solid var(--border-color);
-}
-.modal input[type=file] {
-  padding: 0;
-  border: none;
-}
-.modal input[type=file]::file-selector-button {
-  font-family: var(--primary-font);
-  padding: 0.75em 1em;
-  border: none;
-  font-weight: 600;
-  border-radius: 10px;
-  cursor: pointer;
-  background-color: var(--accent-color);
 }
 .modal textarea {
   height: 100px;
@@ -580,14 +551,154 @@ body {
   gap: 0.5rem;
 }
 
-.dash-cards-profile {
+.card.settings {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
-  grid-auto-rows: minmax(auto, auto);
+  gap: 1em;
+  grid-template-columns: clamp(15rem, 8vw, 20rem) 8fr;
+  padding: 1.5em;
+}
+.card.settings .card-title span {
+  font-size: 0.9em;
+}
+.card.settings .card {
+  background: var(--main-bg-color);
+}
+.card.settings .card.profile-pic {
+  grid-template-columns: clamp(6rem, 8vw, 20rem) 8fr;
+  border-radius: 8px;
+}
+.card.settings .card.profile-pic .btnSection {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+.card.settings .card.profile-pic .btnSection button {
+  font-family: var(--primary-font);
+  padding: 0.75em 1em;
+  border: none;
+  font-weight: 600;
+  border-radius: 10px;
+  cursor: pointer;
+  padding: 10px 20px;
+  background-color: #28a745;
+  color: white;
+}
+.card.settings .card.profile-pic .img-container {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 100%;
+  width: 110px;
+  height: 110px;
+}
+.card.settings .card.profile-pic .img-container img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.card.settings .card.profile-pic input[type=file] {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+}
+.card.settings .card.profile-pic .file-drop-area {
+  position: relative;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  height: 200px;
+  border: 2px dashed var(--border-color);
+  border-radius: 3px;
+  transition: all 0.2s ease;
+}
+.card.settings .card.profile-pic .file-drop-area:hover {
+  background-color: var(--panel-color);
+}
+.card.settings .card.profile-pic .file-drop-area .no-file-yet {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5em;
+  text-align: center;
+}
+.card.settings .card.profile-pic .file-drop-area .no-file-yet span {
+  font-size: 0.8em;
+}
+.card.settings .card.profile-pic .file-drop-area .has-file {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  display: none;
+}
+.card.settings .card.profile-pic .file-drop-area .has-file .fake-btn {
+  background-color: var(--panel-color);
+  border: 2px solid var(--border-color);
+  border-radius: 3px;
+  padding: 8px 15px;
+  margin-right: 10px;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+}
+.card.settings .card.profile-pic .file-drop-area .has-file .file-msg {
+  font-size: smaller;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.card.settings .card.personal-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
   gap: 1em;
 }
-.dash-cards-profile .modal {
-  width: 100%;
+.card.settings .card.personal-info span {
+  font-size: 12px;
+}
+.card.settings .card.personal-info .btnSection {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+.card.settings .card.personal-info .btnSection button {
+  font-family: var(--primary-font);
+  padding: 0.75em 1em;
+  border: none;
+  font-weight: 600;
+  border-radius: 10px;
+  cursor: pointer;
+  padding: 10px 20px;
+  background-color: #28a745;
+  color: white;
+}
+.card.settings .card.personal-info .v-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.card.settings .card.personal-info .h-wrapper {
+  display: flex;
+  gap: 0.5rem;
+}
+.card.settings .card.personal-info input, .card.settings .card.personal-info select {
+  border-radius: 12px;
+  padding: 1em;
+  font-family: var(--primary-font);
+  font-weight: 500;
+  border: 2px solid var(--border-color);
+}
+.card.settings .card.personal-info label {
+  font-size: 14px;
+  font-weight: bold;
 }
 
 .dash-cards {
@@ -660,6 +771,10 @@ body {
   }
 }
 @media screen and (max-width: 768px) {
+  .card.settings {
+    display: flex;
+    flex-direction: column;
+  }
   .on-phone {
     display: grid !important;
   }
